added the preview section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,21 @@
         <button class="btn-primary">Stay focused</button>
       </div>
     </header>
-    <main></main>
+    <main>
+      <section class="live-preview">
+        <div class="preview-container">
+          <div class="preview-info">
+            <h3 class="preview-title">See It in Action</h3>
+            <p class="preview-desc">
+              Explore the live preview and imagine your brand in this bold new
+              look.
+            </p>
+            <button class="btn-primary">live Launch Preview</button>
+          </div>
+          <img class="image" src="Assets/wc-mini.png" alt="" />
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
