user section added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
+      @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
     </style>
     <title>Assignment-1</title>
     <link rel="stylesheet" href="style/a1.css" />
@@ -32,6 +33,25 @@
             <button class="btn-primary">live Launch Preview</button>
           </div>
           <img class="image" src="Assets/wc-mini.png" alt="" />
+        </div>
+      </section>
+      <section class="user">
+        <div class="user-container">
+          <h3 class="preview-title">Joined Thousands of Productive Users</h3>
+          <div class="user-body inter-font">
+            <div>
+              <h3 class="user-title">50K</h3>
+              <p class="user-desc">Active Users</p>
+            </div>
+            <div>
+              <h3 class="user-title">2M+</h3>
+              <p class="user-desc">Focus Sessions</p>
+            </div>
+            <div>
+              <h3 class="user-title">95%</h3>
+              <p class="user-desc">Satisfaction Rate</p>
+            </div>
+          </div>
         </div>
       </section>
     </main>
