added the review section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               Explore the live preview and imagine your brand in this bold new
               look.
             </p>
-            <button class="btn-primary">live Launch Preview</button>
+            <button class="btn-primary">Launch Live Preview</button>
           </div>
           <img class="image" src="Assets/wc-mini.png" alt="" />
         </div>
@@ -50,6 +50,62 @@
             <div>
               <h3 class="user-title">95%</h3>
               <p class="user-desc">Satisfaction Rate</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="review">
+        <h3 class="preview-title">What our users say</h3>
+        <div class="review-container">
+          <div class="review-align">
+            <div class="stars"></div>
+            <div class="review-content">
+              <h4 class="review-title">Loved by Designers</h4>
+              <p class="review-desc inter-font">
+                This template instantly leveled up our presence.” – Studio
+                Vertex
+              </p>
+            </div>
+            <div class="avatar">
+              <img src="Assets/avatar.png" alt="" />
+              <div class="inter-font">
+                <h6>Reviewer Name</h6>
+                <p class="date-font">Date</p>
+              </div>
+            </div>
+          </div>
+          <div class="review-align">
+            <div class="stars"></div>
+            <div class="review-content">
+              <h4 class="review-title">Loved by Designers</h4>
+              <p class="review-desc inter-font">
+                This template instantly leveled up our presence.” – Studio
+                Vertex
+              </p>
+            </div>
+            <div class="avatar">
+              <img src="Assets/avatar.png" alt="" />
+              <div class="inter-font">
+                <h6>Reviewer Name</h6>
+                <p class="date-font">Date</p>
+              </div>
+            </div>
+          </div>
+          <div class="review-align">
+            <div class="stars"></div>
+            <div class="review-content">
+              <h4 class="review-title">Loved by Designers</h4>
+              <p class="review-desc inter-font">
+                This template instantly leveled up our presence.” – Studio
+                Vertex
+              </p>
+            </div>
+            <div class="avatar">
+              <img src="Assets/avatar.png" alt="" />
+              <div class="inter-font">
+                <h6>Reviewer Name</h6>
+                <p class="date-font">Date</p>
+              </div>
             </div>
           </div>
         </div>
