added another section

--- a/index.html
+++ b/index.html
@@ -110,6 +110,20 @@
           </div>
         </div>
       </section>
+      <section class="focus">
+        <div class="focus-container">
+          <div class="focus-things">
+            <h3 class="preview-title">Ready to focus better</h3>
+            <p class="preview-desc">
+              This template instantly leveled up our presence.” – Studio Vertex
+            </p>
+            <button class="btn-primary">Ger Started Free</button>
+          </div>
+          <div>
+            <img class="image2" src="Assets/wc-big.png" alt="" />
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
