added another section

--- a/index.html
+++ b/index.html
@@ -124,6 +124,32 @@
           </div>
         </div>
       </section>
+      <section class="contact">
+        <div class="contact-container">
+          <div class="contact-1">
+            <h1 style="font-size: 78px; text-align: left">
+              Let's Get in Touch
+            </h1>
+          </div>
+          <div class="contact-1 inter-font">
+            <label for="">Email</label>
+            <input type="email" placeholder="example@email.com" />
+            <label for="">Name</label>
+            <input type="text" placeholder="Full name" />
+            <label for="">Message</label>
+            <textarea
+              name=""
+              id=""
+              cols="50"
+              rows="8"
+              placeholder="write your message...."
+            ></textarea>
+            <button style="width: 100%" class="btn-primary">
+              Get in Touch
+            </button>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
