--- a/index.html
+++ b/index.html
@@ -151,6 +151,24 @@
         </div>
       </section>
     </main>
-    <footer></footer>
   </body>
+  <footer>
+    <div class="footer">
+    <div class="logo-part">
+    <h1>LOGO</h2>
+    <p>
+      Ready to elevate your online presence? Contact us today to discuss your
+      project and discover how we can bring your vision to life.
+    </p>
+    </div>
+    <div class="link-part">
+    <ul>
+      <li><a href="x">Home</a></li>
+      <li><a href="x">About</a></li>
+      <li><a href="x">How it Works</a></li>
+      <li><a href="x">Services</a></li>
+    </ul>
+    </div>
+    </div>
+  </footer>
 </html>
